프롬프트 수정 및 프롬프트에 맞게 코드수정 조금 더 Token 아낄 수 있게 공백 제거 및 문법 확인 간단 함수 제작